# narrative-modeling-app

./: .env.production.example  .gitattributes  .gitignore  CACHING_SPRINT_COMPLETE.md  CLAUDE.md  CLERK_TO_NEXTAUTH_MIGRATION.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  DOCUMENTATION_INDEX.md  HANDOFF_DOCUMENTATION.md  LICENSE  LOCAL_DEVELOPMENT.md  MIGRATE_TO_UV.md  NEXTAUTH_DEV_SETUP.md  PRODUCTION_API_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PRODUCT_REQUIREMENTS.md  README.md  SPECIFICATION_REVIEW.md  SPRINT_10.md  SPRINT_11.md  SPRINT_11_GAP_ANALYSIS.md  SPRINT_12.md  SPRINT_12_E2E_ANALYSIS.md  SPRINT_12_PROGRESS.md  SPRINT_12_READINESS.md  SPRINT_1_COMPLETE.md  SPRINT_1_PREP.md  SPRINT_1_STATUS.md  SPRINT_2_COMPLETION.md  SPRINT_2_PLAN.md  SPRINT_3_PLAN.md  SPRINT_4_COMPLETE.md  SPRINT_5_PLAN.md  SPRINT_6_PLAN.md  SPRINT_7_COMPLETION.md  SPRINT_7_PROGRESS.md  SPRINT_9.md  SPRINT_IMPLEMENTATION_PLAN.md  STORY_12.5_E2E_TESTING.md  (+13 more)
apps/backend/: .coverage  .env  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  REDIS_CACHE.md  TEST_STATUS.md  TEST_STATUS_UPDATE.md  __init__.py  docker-compose.test.yml  final_fix_syntax.py  fix_all_test_auth.py  fix_all_tests.py  fix_final_syntax.py  fix_indentation_errors.py  fix_remaining_test_issues.py  fix_syntax_errors.py  fix_test_client_usage.py  fix_test_file_ids.py  fix_test_files_manually.py  fix_tests.py  fix_userdata_fields.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  run_unit_tests.sh  test.csv  test_results.txt  test_simple_onboarding.py  test_transformation_api.py
apps/backend/.benchmarks/Linux-CPython-3.13-64bit/: 0001_70fb527ad0a954e4218a1f240b1d6037fcc73fdd_20251011_100657_uncommited-changes.json  0002_70fb527ad0a954e4218a1f240b1d6037fcc73fdd_20251011_100716_uncommited-changes.json
apps/backend/app/: __init__.py  config.py  main.py
apps/backend/app/api/: deps.py
apps/backend/app/auth/: clerk_auth.old  clerk_auth.py  nextauth_auth.py
apps/backend/app/db/: __init__.py  mongodb.py
apps/backend/app/middleware/: api_version.py  metrics.py  monitoring.py
apps/backend/app/models/: ab_test.py  analytics_result.py  api_key.py  batch_job.py  column_stats.py  (+10 more)
apps/backend/claudedocs/: MODEL_REFACTORING.md  PERFORMANCE_BENCHMARKS.md  SPRINT_12_PROGRESS_SUMMARY.md  STORY_12.4_PERFORMANCE_OPTIMIZATION.md
apps/backend/docs/: API_DOCUMENTATION_SERVICE.md  INTEGRATION_TEST_FIXES.md  SPRINT_8_COMPLETION.md  STORY_12.1_IMPLEMENTATION_REPORT.md  TDD_GUIDE.md  TEST_INFRASTRUCTURE.md
apps/backend/narrative_modeling_app_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/backend/sample_datasets/: customer_churn.csv  house_prices.csv  marketing_response.csv
apps/backend/tests/: conftest.py
apps/backend/utils/: aws.py
apps/mcp/: .gitignore  Dockerfile.dev  README.md  main.py  pyproject.toml  render.yaml  tool_runner.py
apps/mcp/models/: __init__.py
apps/mcp/tests/: __init__.py  conftest.py
apps/mcp/tools/: eda_summary.py
apps/mcp/utils/: numpy_json.py  user_data.py
shared/: README.md  __init__.py  database.py  pyproject.toml
shared/models/: __init__.py
shared/shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+377 files in other folders)
