[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared models and utilities for Narrative Modeling App"
authors = ["Frank Bria <frank.bria@pm.me>"]
readme = "README.md"
packages = [ { include = "shared" } ]

[tool.poetry.dependencies]
python = ">=3.10"
beanie = ">=1.25.0"
motor = ">=3.3.2"
pydantic = ">=2.5.3"
python-dotenv = ">=1.0.0"
