[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Frank Bria <frank.bria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.40"
python-multipart = "^0.0.20"
beanie = "^1.29.0"
motor = "^3.7.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
python-dotenv = "^1.1.0"
boto3 = "^1.37.28"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
