[tool.poetry]
name = "narrative-modeling-backend"
version = "0.1.0"
description = "Backend for the Narrative Modeling Application"
authors = ["Frank Bria <frank.bria@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.40"
python-multipart = "^0.0.20"
beanie = "^1.29.0"
motor = "^3.7.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
python-dotenv = "^1.1.0"
boto3 = "^1.37.28"
httpx = "^0.28.1"
uvicorn = "^0.34.0"
fastapi = "^0.115.0"
pydantic = "^2.11.0"
pydantic-settings = "^2.2.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
numpy = "^2.2.4"
sqlalchemy-utils = "^0.41.2"
openai = "^1.72.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
